--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -18,24 +18,20 @@
     "def calc_distance(point1, point2):\n",
     "\n",
     "    distances = []\n",
-    "    \n",
+    "\n",
     "    for p1, p2 in zip(point1, point2):\n",
     "        distance = sum((x - y) ** 2 for x, y in zip(p1, p2)) ** 0.5\n",
     "        distances.append(distance)\n",
     "    return distances\n",
     "\n",
     "def my_map(func, arg1, arg2):\n",
-    "\n",
     "    print(\"Calling function calc_distance with arguments\", arg1, \"and\", arg2, \".\")\n",
-    "    result = calc_distance(arg1, arg2)\n",
-    "    return result\n",
+    "    return calc_distance(arg1, arg2)\n",
     "\n",
     "point1 = [(1.0, 1.0, 1.0), (2.0, 2.0, 2.0), (3.0, 3.0, 3.0)]\n",
     "point2 = [(4.0, 4.0, 4.0), (5.0, 5.0, 5.0), (6.0, 6.0, 6.0)]\n",
     "\n",
-    "distances = my_map(calc_distance, point1, point2)\n",
-    "\n",
-    "print(distances)"
+    "print(my_map(calc_distance, point1, point2))"
    ]
   }
  ],
